[package]
name = "boot_node"
version = "6.0.1"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
beacon_node = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
eth2_network_config = { workspace = true }
ethereum_ssz = { workspace = true }
hex = { workspace = true }
lighthouse_network = { workspace = true }
log = { workspace = true }
logging = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-async = { workspace = true }
slog-scope = "4.3.0"
slog-term = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
