[package]
name = "lcli"
description = "Lighthouse CLI (modeled after zcli)"
version = "6.0.1"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[features]
portable = ["bls/supranational-portable"]
fake_crypto = ['bls/fake_crypto']
jemalloc = ["malloc_utils/jemalloc"]

[dependencies]
account_utils = { workspace = true }
beacon_chain = { workspace = true }
bls = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
deposit_contract = { workspace = true }
env_logger = { workspace = true }
environment = { workspace = true }
eth2 = { workspace = true }
eth2_network_config = { workspace = true }
eth2_wallet = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_ssz = { workspace = true }
execution_layer = { workspace = true }
hex = { workspace = true }
lighthouse_network = { workspace = true }
lighthouse_version = { workspace = true }
log = { workspace = true }
malloc_utils = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sloggers = { workspace = true }
snap = { workspace = true }
state_processing = { workspace = true }
store = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
validator_dir = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ["malloc_utils"]
