[package]
name = "watch"
version = "0.1.0"
edition = { workspace = true }

[lib]
name = "watch"
path = "src/lib.rs"

[[bin]]
name = "watch"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
beacon_node = { workspace = true }
bls = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
env_logger = { workspace = true }
eth2 = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
url = { workspace = true }

[dev-dependencies]
beacon_chain = { workspace = true }
http_api = { workspace = true }
logging = { workspace = true }
network = { workspace = true }
task_executor = { workspace = true }
testcontainers = "0.15"
tokio-postgres = "0.7.5"
unused_port = { workspace = true }
