[package]
name = "beacon_processor"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
fnv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lighthouse_network = { workspace = true }
logging = { workspace = true }
metrics = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slot_clock = { workspace = true }
strum = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
