[package]
name = "builder_client"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sean Anderson <sean@sigmaprime.io>"]

[dependencies]
eth2 = { workspace = true }
lighthouse_version = { workspace = true }
reqwest = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
