[package]
name = "eth1"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dev-dependencies]
environment = { workspace = true }
eth1_test_rig = { workspace = true }
serde_yaml = { workspace = true }
sloggers = { workspace = true }

[dependencies]
eth2 = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
execution_layer = { workspace = true }
futures = { workspace = true }
logging = { workspace = true }
merkle_proof = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
sensitive_url = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
state_processing = { workspace = true }
superstruct = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
