[package]
name = "deposit_contract"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

build = "build.rs"

[build-dependencies]
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dependencies]
ethabi = "16.0.0"
ethereum_ssz = { workspace = true }
tree_hash = { workspace = true }
types = { workspace = true }
