[package]
name = "environment"
version = "0.1.2"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dependencies]
async-channel = { workspace = true }
eth2_config = { workspace = true }
eth2_network_config = { workspace = true }
futures = { workspace = true }
logging = { workspace = true }
serde = { workspace = true }
slog = { workspace = true }
slog-async = { workspace = true }
slog-json = "2.3.0"
slog-term = { workspace = true }
sloggers = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }

[target.'cfg(not(target_family = "unix"))'.dependencies]
ctrlc = { version = "3.1.6", features = ["termination"] }
