[package]
name = "eth1_test_rig"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }

[dependencies]
deposit_contract = { workspace = true }
ethers-contract = "1.0.2"
ethers-core = { workspace = true }
ethers-providers = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
unused_port = { workspace = true }
